# ethiopiancalendar

./: README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
ethiopiancalendar/: hooks.py
ethiopiancalendar/ethiopian_calendar/: ethiopian_calendar_configure.py
ethiopiancalendar/ethiopian_calendar/doctype/: ethiopian_calendar.js  ethiopian_calendar.json  ethiopian_calendar.py  test_ethiopian_calendar.py
ethiopiancalendar/public/css/: eth_switcher.css  ethiopian_calendar.css  switcher.css
ethiopiancalendar/public/js/: custom_ethiopianDat_controol.js  date_controlsggggggs.js  date_controlss.js  ethiopian_calendar.js  ethiopian_date_control.js
