[project]
name = "ethiopiancalendar"
authors = [
    { name = "Sewunet Abebaw", email = "sewunet92@gmail.com"}
]
description = "The Ethiopian calendar is quite different from the Gregorian calendar, with 13 months (12 months of 30 days and a 13th month of 5 or 6 days in a leap year). Integrating this requires careful consideration of how dates are displayed, stored, and processed within Frappe."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
